cloud-formation/vpc-template.yaml
AWSTemplateFormatVersion: '2010-09-09'


EipForNat:
Type: AWS::EC2::EIP
Properties:
Domain: vpc


NatGateway:
Type: AWS::EC2::NatGateway
Properties:
AllocationId: !GetAtt EipForNat.AllocationId
SubnetId: !Ref PublicSubnet1
Tags:
- Key: Name
Value: dio-natgw


PrivateRouteTable:
Type: AWS::EC2::RouteTable
Properties:
VpcId: !Ref VPC
Tags:
- Key: Name
Value: dio-private-rt


PrivateRouteToNat:
Type: AWS::EC2::Route
Properties:
RouteTableId: !Ref PrivateRouteTable
DestinationCidrBlock: 0.0.0.0/0
NatGatewayId: !Ref NatGateway


PrivateSubnet1RouteTableAssociation:
Type: AWS::EC2::SubnetRouteTableAssociation
Properties:
SubnetId: !Ref PrivateSubnet1
RouteTableId: !Ref PrivateRouteTable


PrivateSubnet2RouteTableAssociation:
Type: AWS::EC2::SubnetRouteTableAssociation
Properties:
SubnetId: !Ref PrivateSubnet2
RouteTableId: !Ref PrivateRouteTable


WebSecurityGroup:
Type: AWS::EC2::SecurityGroup
Properties:
GroupDescription: Acessos HTTP(80) e SSH(22) para instâncias públicas
VpcId: !Ref VPC
SecurityGroupIngress:
- IpProtocol: tcp
FromPort: 22
ToPort: 22
CidrIp: 0.0.0.0/0
- IpProtocol: tcp
FromPort: 80
ToPort: 80
CidrIp: 0.0.0.0/0
Tags:
- Key: Name
Value: dio-web-sg


Outputs:
VpcId:
Value: !Ref VPC
Description: ID da VPC
Export:
Name: !Sub "${AWS::StackName}-VpcId"
PublicSubnet1Id:
Value: !Ref PublicSubnet1
Description: Sub-rede pública A
PublicSubnet2Id:
Value: !Ref PublicSubnet2
Description: Sub-rede pública B
PrivateSubnet1Id:
Value: !Ref PrivateSubnet1
PrivateSubnet2Id:
Value: !Ref PrivateSubnet2
WebSecurityGroupId:
Value: !Ref WebSecurityGroup
Description: SG de acesso web/ssh
